add translate services

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
         />
 
         <link rel="stylesheet" href="/styles/reset.css" />
+        <link rel="stylesheet" href="/loading/styles/loading.css" />
     </head>
     <body>
         <div id="root"></div>
+
+        <script src="/loading/scripts/loading.js"></script>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
