--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 
         <link rel="stylesheet" href="/styles/reset.css" />
         <link rel="stylesheet" href="/loading/styles/loading.css" />
+
+        <script>
+            const setVhSize = () => {
+                const vh = window.innerHeight * 0.01;
+                document.documentElement.style.setProperty('--vh', `${vh}px`);
+            };
+
+            setVhSize();
+            window.addEventListener('resize', setVhSize);
+        </script>
     </head>
     <body>
         <div id="root"></div>
