update game name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name="x5-fullscreen" content="true" />
         <meta name="google" content="notranslate" />
 
-        <title>GAME NAME</title>
+        <title>DRAGON TIGER WILD</title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
