--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
             name="viewport"
             content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,viewport-fit=cover"
         />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="application-name" content="Casino" />
+        <meta name="mobile-web-app-capable" content="yes" />
+        <meta name="application-name" content="IDNLIVE" />
         <meta name="author" content="Idnlive" />
         <meta name="browsermode" content="application" />
         <meta name="full-screen" content="yes" />
