--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-        <meta
-            name="viewport"
-            content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,viewport-fit=cover"
-        />
+        <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="application-name" content="IDNLIVE" />
         <meta name="author" content="Idnlive" />
@@ -20,7 +17,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@700..800&family=Manrope:wght@200..800&family=Poppins:wght@600&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@700..800&family=Manrope:wght@200..800&family=Poppins:wght@600&display=swap&v=1.0.0"
             rel="stylesheet"
         />
 
