update game title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="x5-fullscreen" content="true" />
         <meta name="google" content="notranslate" />
 
-        <title>DRAGON TIGER WILD</title>
+        <title>Dragon Tiger Wild</title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
