--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
 
         <script src="/loading/scripts/loading.js"></script>
         <script>
-            function isIOS() {
+            const isIOS = () => {
                 const ua = navigator.userAgent;
                 // return !!ua.match(/iPad/i) || !!ua.match(/iPhone/i) || !!ua.match(/iPod/i)
                 return /\b(iPad|iPhone|iPod)\b/.test(ua);
-            }
+            };
 
-            if (isIOS()) {
+            const inIframe = () => window.self !== window.top;
+
+            if (isIOS() && !inIframe()) {
                 document.body.classList.add('ios');
                 window.isIOS = true;
             } else {
