add preconnect lottielab

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             rel="stylesheet"
         />
 
+        <link rel="preconnect" href="https://cdn.lottielab.com" />
+
         <link rel="stylesheet" href="/styles/reset.css" />
         <link rel="stylesheet" href="/loading/styles/loading.css" />
 
