update loading script

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <body>
         <div id="root"></div>
 
-        <script src="/loading/scripts/loading.js"></script>
+        <script type="module" src="/loading/scripts/loading.js"></script>
         <script>
             const isIOS = () => {
                 const ua = navigator.userAgent;
